<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="jugar">Jugar</string>
    <string name="configurar">Configurar</string>
    <string name="acercaDe">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="hello_world">Hello world of Asteroides!</string>

</resources>